--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -54,9 +54,9 @@
                     <input type="email" name="notification_email" id="notification_email" maxlength="128" value="{{ form.notification_email }}" class="text-input">
                 </li>
                 <li>
-                    <label for="ebs_name">Amazon Elastic Beanstalk Application Name</label>
-                    <input type="text" name="ebs_name" id="ebs_name" maxlength="255" value="{{ form.ebs_name }}" class="text-input">
-                    <small class="additional">Required to add EBS deployments.</small>
+                    <label for="eb_name">Amazon Elastic Beanstalk Application Name</label>
+                    <input type="text" name="eb_name" id="eb_name" maxlength="255" value="{{ form.eb_name }}" class="text-input">
+                    <small class="additional">Required to add EB deployments.</small>
                 </li>
             </ul>
 
