--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -32,9 +32,11 @@
             </dd>
 
             <dt class="split--left__title">
-                {% set pathLabel = 'Directory' %}
+                {% set pathLabel = 'Path' %}
                 {% if push.deployment and push.deployment.server.type == 'elasticbeanstalk' %}
-                    {% set pathLabel = 'EBS Environment' %}
+                    {% set pathLabel = 'EB Environment' %}
+                {% elseif push.deployment and push.deployment.server.type == 'ec2' %}
+                    {% set pathLabel = 'EC2 Pool' %}
                 {% endif %}
                 {{ pathLabel }}
             </dt>
@@ -42,7 +44,10 @@
                 {% if push.deployment %}
                     {% set path = push.deployment.path %}
                     {% if push.deployment.server.type == 'elasticbeanstalk' %}
-                        {% set path = push.deployment.ebsEnvironment %}
+                        {% set path = push.deployment.ebEnvironment %}
+
+                    {% elseif push.deployment.server.type == 'ec2' %}
+                        {% set path = push.deployment.ec2Pool %}
                     {% endif %}
 
                     <code>{{ path }}</code>
