Add search filter for git ref on build and push histories

--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -6,7 +6,7 @@
         <th>Reference</th>
         <th>Initiator</th>
         <th>Date</th>
-        <th></th>
+        <th class="t10"></th>
     </thead>
     <tbody>
     {% for build in builds %}
