--- a/app/templates/partials/pagination.twig
+++ b/app/templates/partials/pagination.twig
@@ -1,8 +1,11 @@
-{% macro pagination(currentPage, lastPage, routeName, routeParameters) %}
+{% macro pagination(currentPage, lastPage, routeName, routeParameters, queryParameters) %}
+
+    {% set queryParameters = queryParameters|default({}) %}
+
     <ol class="nav--pagination">
         <li class="nav--pagination__prev">
             {% if currentPage > 1 %}
-                <a href="{{ urlFor(routeName, routeParameters|merge({'page': currentPage-1})) }}">
+                <a href="{{ urlFor(routeName, routeParameters|merge({'page': currentPage-1}), queryParameters) }}">
                     <svg class="icon"><use xlink:href="#caret-left"></use></svg>newer
                 </a>
             {% else %}
@@ -18,7 +21,7 @@
         </li>
         <li class="nav--pagination__next">
             {% if currentPage < lastPage %}
-                <a href="{{ urlFor(routeName, routeParameters|merge({'page': currentPage+1})) }}">
+                <a href="{{ urlFor(routeName, routeParameters|merge({'page': currentPage+1}), queryParameters) }}">
                     older <svg class="icon mls"><use xlink:href="#caret-right"></use></svg>
                 </a>
             {% else %}
