--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,15 +55,18 @@
 @import "partials/dash-box";
 @import "partials/pr";
 @import "partials/radio-grid";
+@import "partials/search";
+
 @import "partials/base/code";
 @import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
 @import "partials/base/error";
-@import "partials/patterns/nav";
-@import "partials/patterns/buttons";
 @import "partials/base/lists";
 @import "partials/base/video";
+
+@import "partials/patterns/nav";
+@import "partials/patterns/buttons";
 @import "partials/patterns/block-list";
 @import "partials/patterns/alert-bar";
 @import "partials/patterns/choice-list";
