--- a/app/templates/partials/pending-table.twig
+++ b/app/templates/partials/pending-table.twig
@@ -48,7 +48,16 @@
                             {% endif %}
                         </td>
                         {% if job.deployment %}
-                            <td>{{ job.build.environment.key }} → {{ job.deployment.server.name }}</td>
+
+                            {% if job.deployment.server.type == 'elasticbeanstalk' %}
+                                {% set servername = 'EB (' ~ job.deployment.ebEnvironment ~ ')' %}
+                            {% elseif job.deployment.server.type == 'ec2' %}
+                                {% set servername = 'EC2 (' ~ job.deployment.ec2Pool ~ ')' %}
+                            {% else %}
+                                {% set servername = job.deployment.server.name %}
+                            {% endif %}
+
+                            <td>{{ job.build.environment.key }} → {{ servername }}</td>
                         {% else %}
                             <td>{{ job.build.environment.key }} → Unknown</td>
                         {% endif %}
