--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -24,6 +24,8 @@
                     {% set servername = push.deployment.server.name %}
                     {% if push.deployment.server.type == 'elasticbeanstalk' %}
                         {% set servername = 'Elastic Beanstalk' %}
+                    {% elseif push.deployment.server.type == 'ec2' %}
+                        {% set servername = 'EC2' %}
                     {% endif %}
                     <a href="{{ urlFor('server', {'id': push.deployment.server.id}) }}">{{ servername }}</a>
                 {% else %}
